--- a/resume.tex
+++ b/resume.tex
@@ -106,7 +106,7 @@
   \resumeSubHeadingListStart{}
     \resumeSubheading % chktex 1
       {Rutgers University \textendash{} School of Engineering}{New Brunswick, NJ}
-      {Triple Major (BS) in Computer Science, Computer Engineering, and Statistics/Mathematics}{September 2021 \textendash{} May 2025}
+      {BS in Computer Science, Computer Engineering, Data Science, and Statistics/Mathematics}{September 2021 \textendash{} May 2025}
       \begin{itemize}[leftmargin=0.25in, label={}]
       \item Relevant Coursework: Deep Learning, Statistical Learning, Machine Learning, Data Science, Database Management, Statistical Inference, Algorithms, Computer Architecture, Data Structures, Probability Theory, Differential Equations, Multivariable Calculus, Discrete Math, Digital Logic, Linear Systems, Information and Network Security, Computer Systems, Digital Signal Processing, Multivariate Statistical Analysis, Software Engineering, Virtual Reality \\
 \end{itemize}
