--- a/resume.tex
+++ b/resume.tex
@@ -106,7 +106,7 @@
   \resumeSubHeadingListStart{}
     \resumeSubheading % chktex 1
       {Rutgers University \textendash{} School of Engineering}{New Brunswick, NJ}
-      {BS in Computer Science, Computer Engineering, Data Science, and Statistics/Mathematics}{September 2021 \textendash{} May 2025}
+      {BS in Computer Science, Computer Engineering, and Data Science}{September 2021 \textendash{} May 2025}
       \begin{itemize}[leftmargin=0.25in, label={}]
       \item Relevant Coursework: Deep Learning, Statistical Learning, Machine Learning, Data Science, Database Management, Statistical Inference, Algorithms, Computer Architecture, Data Structures, Probability Theory, Differential Equations, Multivariable Calculus, Discrete Math, Digital Logic, Linear Systems, Information and Network Security, Computer Systems, Digital Signal Processing, Multivariate Statistical Analysis, Software Engineering, Virtual Reality \\
 \end{itemize}
@@ -150,7 +150,7 @@
           \resumeItemListStart{}
             \resumeItem{Designed and trained a generative adversarial network (GAN) to analyze superconductivity data using PyTorch}
             \resumeItem{Withdrew \textbf{80,000+ entry} dataset from UCI Machine Learning Repository using Pandas}
-            \resumeItem{Published package on Python Package Index (PyPI) with \href{https://www.pepy.tech/projects/supercongan}{\textbf{55,000+ downloads}}}
+            \resumeItem{Published package on Python Package Index (PyPI) with \href{https://www.pepy.tech/projects/supercongan}{\underline{\textbf{55,000+ downloads}}}
             \resumeItem{Achieved \textbf{80\%} test coverage using Pytest to ensure proper function of package}
             \resumeItem{Wrote paper summarizing findings and potential future research directions with LaTeX, using \textbf{500,000+ data points}}
           \resumeItemListEnd{}
