replace dsp with linalg

--- a/resume.tex
+++ b/resume.tex
@@ -108,7 +108,7 @@
       {Rutgers University \textendash{} School of Engineering}{New Brunswick, NJ}
       {BS in Computer Science, Computer Engineering, and Data Science}{September 2021 \textendash{} May 2025}
       \begin{itemize}[leftmargin=0.25in, label={}]
-      \item Relevant Coursework: Deep Learning, Statistical Learning, Machine Learning, Data Science, Database Management, Statistical Inference, Algorithms, Computer Architecture, Data Structures, Probability Theory, Differential Equations, Multivariable Calculus, Discrete Math, Digital Logic, Linear Systems, Information and Network Security, Computer Systems, Digital Signal Processing, Multivariate Statistical Analysis, Software Engineering, Virtual Reality \\
+      \item Relevant Coursework: Deep Learning, Statistical Learning, Machine Learning, Data Science, Database Management, Statistical Inference, Algorithms, Computer Architecture, Data Structures, Probability Theory, Differential Equations, Multivariable Calculus, Discrete Math, Digital Logic, Linear Systems, Information and Network Security, Computer Systems, Linear Algebra, Multivariate Statistical Analysis, Software Engineering, Virtual Reality \\
 \end{itemize}
   \resumeSubHeadingListEnd{}
 
