--- a/resume.tex
+++ b/resume.tex
@@ -150,14 +150,14 @@
           \resumeItemListStart{}
             \resumeItem{Designed and trained a generative adversarial network (GAN) to analyze superconductivity data using PyTorch}
             \resumeItem{Withdrew \textbf{80,000+ entry} dataset from UCI Machine Learning Repository using Pandas}
-            \resumeItem{Published package on Python Package Index (PyPI) with \href{https://www.pepy.tech/projects/supercongan}{55,000+ downloads}
+            \resumeItem{Published package on Python Package Index (PyPI) with \href{https://www.pepy.tech/projects/supercongan}{\textbf{\underline{55,000+ downloads}}}}
             \resumeItem{Achieved \textbf{80\%} test coverage using Pytest to ensure proper function of package}
             \resumeItem{Wrote paper summarizing findings and potential future research directions with LaTeX, using \textbf{500,000+ data points}}
           \resumeItemListEnd{}
       \resumeProjectHeading % chktex 1
             {\textbf{Cityscape} $|$ Devpost Entry: \underline{\url{https://bit.ly/3OZjJ07}}}{}
             \resumeItemListStart{}
-            \resumeItem{Led \textbf{team of 4} to brainstorm, design, and write mobile app to give iconic tours of cities}
+            \resumeItem{Led \textbf{team of 4} to brainstorm, design, and write a mobile app to give iconic tours of cities}
             \resumeItem{Wrote controllers and models for MongoDB using Mongoose ORM to store \textbf{30+ kB} of geographic data in NoSQL schema}
             \resumeItem{Built mobile user interface allowing users to search, review, rank, and explore \textbf{100+ tours} using Flutter/Dart}
             \resumeItem{Constructed REST API using Express.js and nodemon to increase development velocity by \textbf{20\%} with hot-reloading}
@@ -170,7 +170,7 @@
             \resumeItem{Implemented F1-based linear term frequency bigram model to achieve \textbf{90.5\%} accuracy}
             \resumeItem{Extracted data from \textbf{25,000+} movie reviews with Pandas and removed \textbf{20+} stopwords to improve model performance}
             \resumeItem{Created confusion matrices and data visualizations for \textbf{5+} models using Seaborn}
-            \resumeItem{Presented results in annual data science competition in local community, placing \textbf{3rd place} out of \textbf{15+} participants}
+            \resumeItem{Presented results in annual data science competition in the local community, placing \textbf{3rd place} out of \textbf{15+} participants}
             \resumeItemListEnd{}
         \resumeProjectHeading % chktex 1
             {\textbf{EyeQ} $|$ Github Repository: \underline{\url{https://bit.ly/3RsAyBL}}}{}
@@ -194,7 +194,7 @@
         {Rutgers IEEE}{Rutgers University}
         \resumeItemListStart{}
             \resumeItem{Created and managed budget for largest engineering student organization, with annual budget over \textbf{\$100,000}}
-            \resumeItem{Managed spending and reimbursed \textbf{20+} executive board members using Google Sheets and Jira}
+            \resumeItem{Managed spending and reimbursed \textbf{20+} executive board members using Google Sheets, Zapier, and a Jira dashboard}
             \resumeItem{Previous: Hackathon Planner (September 2021 \textendash{} April 2023) planned hackathon with \textbf{100+} attendees}
         \resumeItemListEnd{}
     \resumeSubHeadingListEnd{}
