--- a/resume.tex
+++ b/resume.tex
@@ -194,7 +194,7 @@
         {Rutgers IEEE}{Rutgers University}
         \resumeItemListStart{}
             \resumeItem{Created and managed budget for largest engineering student organization, with annual budget over \textbf{\$100,000}}
-            \resumeItem{Managed spending and reimbursed \textbf{20+} executive board members using Google Sheets, Zapier, and a Jira dashboard}
+            \resumeItem{Managed spending and reimbursed \textbf{20+} executive board members using Google Sheets, Zapier, and a self-created Jira payments dashboard}
             \resumeItem{Previous: Hackathon Planner (September 2021 \textendash{} April 2023) planned hackathon with \textbf{100+} attendees}
         \resumeItemListEnd{}
     \resumeSubHeadingListEnd{}
