--- a/resume.tex
+++ b/resume.tex
@@ -194,7 +194,7 @@
         {Rutgers IEEE}{Rutgers University}
         \resumeItemListStart{}
             \resumeItem{Created and managed budget for largest engineering student organization, with annual budget over \textbf{\$100,000}}
-            \resumeItem{Reimbursed \textbf{20+} board members using Google Sheets; automated a Jira-Zapier payments dashboard}
+            \resumeItem{Handled expenses and processed reimbursements through Google Sheets; created automated Jira-Zapier payments dashboard}
             \resumeItem{Previous: Hackathon Planner (September 2021 \textendash{} April 2023) planned hackathon with \textbf{100+} attendees}
         \resumeItemListEnd{}
     \resumeSubHeadingListEnd{}
